kd/ingress-maintenance.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"     # TODO Remove this once ACP have upgraded ingress controller 0.21.0
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/whitelist-source-range: "62.25.109.196/24"
    ingress.kubernetes.io/rewrite-target: /htmlstatic
  name: pttg-ip-fm-ui
spec:
  rules:
  - host: fm.ip.pttg.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: pttg-maintenance
          servicePort: 443
        path: /
  tls:
  - hosts:
    - fm.ip.pttg.homeoffice.gov.uk
    secretName: letsencrypt-tls
